[gd_scene load_steps=18 format=2]

[ext_resource path="res://Models/Roof/Roof.tscn" type="PackedScene" id=1]
[ext_resource path="res://Models/Door/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Materials/Blocks/Blocks.tres" type="Material" id=4]
[ext_resource path="res://Materials/Concrete/Concrete.tres" type="Material" id=5]
[ext_resource path="res://Scripts/Stage3.gd" type="Script" id=6]
[ext_resource path="res://Models/Enemy/Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Models/Enemy/WeepingEnemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://Models/Lamp/lamp.obj" type="ArrayMesh" id=9]
[ext_resource path="res://Scripts/Lamp.gd" type="Script" id=10]
[ext_resource path="res://Sounds/lockeddoor.wav" type="AudioStream" id=11]

[sub_resource type="Environment" id=32]
background_mode = 1
ambient_light_color = Color( 1, 1, 1, 1 )
fog_depth_begin = 0.0
fog_depth_end = 20.0
tonemap_mode = 3
ssao_enabled = true
ssao_intensity = 2.0
ssao_radius2 = 5.0
ssao_intensity2 = 2.0
ssao_light_affect = 1.0
ssao_quality = 2
glow_bloom = 0.6
glow_blend_mode = 1
glow_bicubic_upscale = true
adjustment_enabled = true

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 20, 32 )

[sub_resource type="PlaneMesh" id=13]
flip_faces = true
size = Vector2( 16, 24 )

[sub_resource type="BoxShape" id=30]
extents = Vector3( 63.36, 119.73, 9.28 )

[sub_resource type="NavigationMesh" id=31]
vertices = PoolVector3Array( -4.6, 0.25, -7.9, -4.6, 0.25, -15.4, -9.4, 0.25, -15.4, -9.4, 0.25, -7.9, -9.4, 0.25, -0.0999994, -9.4, 0.25, 7.7, -4.6, 0.25, 7.7, -4.6, 0.25, -0.0999994, -9.4, 0.25, 7.7, -9.4, 0.25, 15.5, -4.6, 0.25, 15.5, -4.6, 0.25, 7.7, -4.6, 0.25, -0.0999994, -4.6, 0.25, -7.9, -9.4, 0.25, -7.9, -9.4, 0.25, -0.0999994, 9.5, 0.25, -7.9, 9.5, 0.25, -15.4, 4.7, 0.25, -15.4, 4.7, 0.25, -7.9, 4.7, 0.25, -0.0999994, 4.7, 0.25, 7.7, 9.5, 0.25, 7.7, 9.5, 0.25, -0.0999994, 4.7, 0.25, 7.7, 4.7, 0.25, 15.5, 9.5, 0.25, 15.5, 9.5, 0.25, 7.7, 9.5, 0.25, -0.0999994, 9.5, 0.25, -7.9, 4.7, 0.25, -7.9, 4.7, 0.25, -0.0999994, 3.2, 0.25, -7.6, 3.2, 0.25, -15.1, -3.1, 0.25, -15.1, -3.1, 0.25, -7.6, -3.1, 0.25, 7.4, -3.1, 0.25, 15.2, 3.2, 0.25, 15.2, 3.2, 0.25, 7.4, 3.2, 0.25, -0.0999994, 3.2, 0.25, -7.6, -3.1, 0.25, -7.6, -3.1, 0.25, -0.0999994, -3.1, 0.25, -0.0999994, -3.1, 0.25, 7.4, 3.2, 0.25, 7.4, 3.2, 0.25, -0.0999994 )
polygons = [ PoolIntArray( 3, 2, 0 ), PoolIntArray( 0, 2, 1 ), PoolIntArray( 7, 6, 4 ), PoolIntArray( 4, 6, 5 ), PoolIntArray( 11, 10, 8 ), PoolIntArray( 8, 10, 9 ), PoolIntArray( 15, 14, 12 ), PoolIntArray( 12, 14, 13 ), PoolIntArray( 19, 18, 16 ), PoolIntArray( 16, 18, 17 ), PoolIntArray( 23, 22, 20 ), PoolIntArray( 20, 22, 21 ), PoolIntArray( 27, 26, 24 ), PoolIntArray( 24, 26, 25 ), PoolIntArray( 31, 30, 28 ), PoolIntArray( 28, 30, 29 ), PoolIntArray( 35, 34, 32 ), PoolIntArray( 32, 34, 33 ), PoolIntArray( 39, 38, 36 ), PoolIntArray( 36, 38, 37 ), PoolIntArray( 43, 42, 40 ), PoolIntArray( 40, 42, 41 ), PoolIntArray( 47, 46, 44 ), PoolIntArray( 44, 46, 45 ) ]

[sub_resource type="SpatialMaterial" id=35]
emission_enabled = true
emission = Color( 0.843137, 0.776471, 0.686275, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false

[node name="Stage3" type="Spatial"]
script = ExtResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 32 )

[node name="Floor" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = ExtResource( 5 )

[node name="Roof" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.77, 0, 0, 0, 1, 0, 0, 0, 0.7, 0, 3.9, 8 )

[node name="Roof" type="MeshInstance" parent="Roof"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0419593, 0 )
mesh = SubResource( 13 )
material/0 = ExtResource( 5 )

[node name="Roof2" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.77, 0, 0, 0, 1, 0, 0, 0, 0.7, 0, 3.9, -9.24676 )

[node name="Roof" type="MeshInstance" parent="Roof2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0419593, 0 )
mesh = SubResource( 13 )
material/0 = ExtResource( 5 )

[node name="Walls" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9, 0 )
cast_shadow = 0
use_collision = true
invert_faces = true
width = 8.0
height = 4.1
depth = 32.0
material = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 15.344 )

[node name="Door2" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.015, 0, 0, 0, 0.015, 0, 0, 0, 0.015, 0, 3.15, 15.959 )

[node name="Door2" type="StaticBody" parent="Door2"]
transform = Transform( 1, 0, 7.10543e-15, 0, 1, 0, -7.10543e-15, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Door2/Door2"]
transform = Transform( 1, 0, 4.61853e-14, 0, 1, 0, -4.61853e-14, 0, 1, 0, -110.667, -6.38428 )
shape = SubResource( 30 )

[node name="Door3" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.015, 0, 0, 0, 0.015, 0, 0, 0, 0.015, 0, 3.15, -15.9863 )

[node name="Door3" type="StaticBody" parent="Door3"]
transform = Transform( 1, 0, 7.10543e-15, 0, 1, 0, -7.10543e-15, 0, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Door3/Door3"]
transform = Transform( 1, 0, 4.61853e-14, 0, 1, 0, -4.61853e-14, 0, 1, 0, -110.667, -6.38428 )
shape = SubResource( 30 )

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.24985, 0 )
navmesh = SubResource( 31 )

[node name="WeepingEnemy1" parent="Navigation" instance=ExtResource( 8 )]
transform = Transform( 0.38, 0, 0, 0, 0.38, 0, 0, 0, 0.38, 0.969, 0, 10.096 )
speed = 2.4

[node name="WeepingEnemy2" parent="Navigation" instance=ExtResource( 8 )]
transform = Transform( 0.38, 0, 0, 0, 0.38, 0, 0, 0, 0.38, -1.847, 0, 9.979 )
speed = 2.4

[node name="WeepingEnemy3" parent="Navigation" instance=ExtResource( 8 )]
transform = Transform( 0.38, 0, 0, 0, 0.38, 0, 0, 0, 0.38, -0.117, 0, -14.081 )
speed = 2.4

[node name="Lamps" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.41033, 0 )

[node name="Lamp1" type="MeshInstance" parent="Lamps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.768, 10 )
cast_shadow = 0
mesh = ExtResource( 9 )
material/0 = SubResource( 35 )
material/1 = null
script = ExtResource( 10 )

[node name="OmniLight" type="OmniLight" parent="Lamps/Lamp1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0122131, -2.58024, -0.00569057 )
light_color = Color( 0.713726, 0.713726, 0.713726, 1 )
light_energy = 0.5
shadow_enabled = true
omni_range = 6.0
omni_attenuation = 5.0

[node name="Lamp2" type="MeshInstance" parent="Lamps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.768, 5 )
cast_shadow = 0
mesh = ExtResource( 9 )
material/0 = SubResource( 35 )
material/1 = null
script = ExtResource( 10 )

[node name="OmniLight" type="OmniLight" parent="Lamps/Lamp2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0122131, -2.58024, -0.00569057 )
light_color = Color( 0.713726, 0.713726, 0.713726, 1 )
light_energy = 0.5
shadow_enabled = true
omni_range = 6.0
omni_attenuation = 5.0

[node name="Lamp3" type="MeshInstance" parent="Lamps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.768, 0 )
cast_shadow = 0
mesh = ExtResource( 9 )
material/0 = SubResource( 35 )
material/1 = null
script = ExtResource( 10 )

[node name="OmniLight" type="OmniLight" parent="Lamps/Lamp3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0122131, -2.58024, -0.00569057 )
light_color = Color( 0.713726, 0.713726, 0.713726, 1 )
light_energy = 0.5
shadow_enabled = true
omni_range = 6.0
omni_attenuation = 5.0

[node name="Lamp4" type="MeshInstance" parent="Lamps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.768, -5 )
cast_shadow = 0
mesh = ExtResource( 9 )
material/0 = SubResource( 35 )
material/1 = null
script = ExtResource( 10 )

[node name="OmniLight" type="OmniLight" parent="Lamps/Lamp4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0122131, -2.58024, -0.00569057 )
light_color = Color( 0.713726, 0.713726, 0.713726, 1 )
light_energy = 0.5
shadow_enabled = true
omni_range = 6.0
omni_attenuation = 5.0

[node name="Lamp5" type="MeshInstance" parent="Lamps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.768, -10 )
cast_shadow = 0
mesh = ExtResource( 9 )
material/0 = SubResource( 35 )
material/1 = null
script = ExtResource( 10 )

[node name="OmniLight" type="OmniLight" parent="Lamps/Lamp5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0122131, -2.58024, -0.00569057 )
light_color = Color( 0.713726, 0.713726, 0.713726, 1 )
light_energy = 0.5
shadow_enabled = true
omni_range = 6.0
omni_attenuation = 5.0

[node name="ExposureTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Enemy" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.38, 0, 7.45058e-09, 0, 0.38, 0, -7.45058e-09, 0, 0.38, 2.417, 0, 1.22964 )

[node name="Enemy2" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.38, 0, 7.45058e-09, 0, 0.38, 0, -7.45058e-09, 0, 0.38, -2.423, 0, -7.85413 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="LockedDoor" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "Reverb"

[node name="DoorTimer" type="Timer" parent="."]

[connection signal="timeout" from="ExposureTimer" to="." method="_on_ExposureTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DoorTimer" to="." method="_on_DoorTimer_timeout"]
